# mpp_enc_demo

./: CMakeLists.txt  README.md
include/: user_comm.h
src/: ctx_manager.c  encode.c  test_demo.c
